# cmake_tutorial

./: LICENSE  README.md
library_example/: CMakeLists.txt
library_example/include/: myfunctions.h
library_example/src/: myfunctions.c
program_example/: CMakeLists.txt
program_example/include/: helpers.h
program_example/src/: helpers.c  main.c
